kubernetes/apps/home-automation/redis/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master-metallb
  namespace: home-automation

spec:
  selector:
    app.kubernetes.io/component: master
    app.kubernetes.io/name: redis
    apps.kubernetes.io/pod-index: "0"
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 10.0.0.29
